-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.0
-
None
-
I102788f2c9bf97b4002b350673f9219e32e7a052
QtQuick 2.0's caching of roleNames triggers a bug in the QSortFilterProxyModel (proxy1) handling of a source model reset signal if the source model itself is also a proxy model (proxy2).
On setting proxy2's sourceModel proxy1 does not not update its roleNames.
QtQuick ListView delegates won't correctly display any of the model's data then.
Proposed fix is to update the roleNames in the reset handler. I'll post a change to gerrit with fix + autotest.
For Gerrit Dashboard: QTBUG-28982 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
44095,3 | Update roleNames in QSortFilterProxyModel if sourceModel resets. | stable | qt/qtbase | Status: ABANDONED | -1 | 0 |
46061,2 | Update roleNames in QAbstractProxyModel if sourceModel resets. | dev | qt/qtbase | Status: MERGED | +2 | 0 |