Update roleNames in QAbstractProxyModel if sourceModel resets.

If a sourceModel resets, it's roleNames might have changed. This
is most likely the case if sourceModel itself is also a proxy model
of which the sourceModel was changed.

Task-number: QTBUG-28982
Change-Id: I102788f2c9bf97b4002b350673f9219e32e7a052
Reviewed-by: Nils Jeisecke <jeisecke@saltation.de>
Reviewed-by: Stephen Kelly <stephen.kelly@kdab.com>

cregit: ffea8e98f712a8e2158a2bb843a649e96eea991e https://github.com/qt/qtbase/commit/ffea8e98f712a8e2158a2bb843a649e96eea991e