src/corelib/itemmodels/qabstractproxymodel.h
@@ -298,6 +298,13 @@ directive|endif
 argument_list|)
 block|;
 name|protected
+name|Q_SLOTS
+operator|:
+name|void
+name|resetInternalData
+argument_list|()
+block|;
+name|protected
 operator|:
 name|QAbstractProxyModel
 argument_list|(
